# mobilsayt

./: .dockerignore  .gitignore  ADMIN_SYSTEM.md  App.js  DEPLOY.md  DOCKER_DEPLOYMENT.md  DOCKER_QUICK_START.md  Invoice Table Customization.md  NETLIFY_DEPLOYMENT.md  NETLIFY_QUICK_START.md  NOTLAR.md  PUSH_README.md  QEYDLER.md  README.md  RENDER_DEPLOY.md  RENDER_ENV_VARIABLES.md  RENDER_QUICK_START.md  RENDER_STEP_BY_STEP.md  Refine UI, Table Behavior.md  app.config.js  app.json  asa.html  build_frontend.sh  convert_to_sales.ps1  deploy.py  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  eas.json  invoice_debug.json  netlify.toml  package-lock.json  package.json  push.py  push_to_rust.py  refactor_alis.py  refactor_satis.py  render.yaml  revert_satis_errors.py  server.js  (+5 more)
backend/: Dockerfile  Dockerfile.dev  create_admin_user.sql  create_all_tables.sql  database_check.js  db_out.txt  debug_output.txt  make_admin.py  migrate_activity_logs.py  migrate_admin_system.py  migrate_customer_type.py  migrate_logs_simple.py  package-lock.json  package.json  reset_password.py  run_activity_logs_migration.py  run_notifications_migration.py  seed_invoices.py  zan.txt  (+2 more)
backend-rust/: .env.example  Cargo.toml  README.md  start-dev.ps1  start.bat  start.ps1
backend-rust/src/: db.rs  main.rs
backend-rust/src/handlers/: categories.rs  customers.rs  debug.rs  discounts.rs  logs.rs  mod.rs  notifications.rs  orders.rs  products.rs  setup.rs  warehouses.rs
backend-rust/src/models/: customer.rs  discount.rs  invoice.rs  log.rs  mod.rs  notification.rs  product.rs
(+193 files in other folders)
